  at the file name prompt instead of jumping into the menu system.  Also
  ^D brings up the menu, as in tcsh.  Also, tab completion now works on user
  names for ~ expansion.

- Now there is a ~/.joe_state file which stores:
	all history buffers
	current keyboard macros
	yank records

- Joe now has xterm mouse support: when enabled, the mouse can position
  the cursor and select blocks.  When enabled, shift-click emulates old
  xterm mouse behavior.

- More syntax files: TeX, CSS, OCaml, Delphi, SML and 4GL.  Thanks to
  all of the contributers.

- Vastly improved highlighting of Perl and Shell due to the highlighter now
  understanding word and balanced delimiters.

- Many bugs have been fixed (every bug which has been entered into the
  sourceforge project page has been addressed).  Hopefully I didn't add
  too many new ones :-)

JOE 3.1

- Regex and incremental search (jmacs ^S) now work for UTF-8

- More and improved syntax highlighting files, including Mason

- Use ^T E to set character set of file (hit <tab> <tab> at the
  prompt for a list of available character sets).

- Can install custom "i18n" style byte oriented character set
  definition files.

- No longer depends on iconv() (easier to compile)

- Fix bug where right arrow was not doing right thing on last line

- Fix UTF-8 codes between 0x10000 - 0x1FFFF

- Now prints <XXXX> for unicode control characters

- Improved smart home, indent, etc.

- TAB completion is now more "bash"-like

- When multiple files are given on command line, they end up in
  same order on the screen in JOE (before they were shuffled).

- Menu size is now variable (40% of window size or smaller if
  it's not filled).

- Added -icase option for case insensitive search by default.

- Added -wrap option, which makes searches wrap

- Added status line sequence %x: shows current context (function
  name if you're editing C).

- Added tab completion at search prompts and ESC-Enter for tab
  completion within text windows.
