@@ -1352,25 +1352,27 @@ int upgdn(BW *bw)
 int uupslide(BW *bw)
 {
 	bw = (BW *) bw->parent->main->object;
-	if (bw->top->line) {
-		if (bw->top->line + bw->h - 1 != bw->cursor->line)
+	if (bw->o.hex ? bw->top->byte/16 : bw->top->line) {
+		if (bw->o.hex ? bw->top->byte/16 + bw->h -1 != bw->cursor->byte/16 : bw->top->line + bw->h - 1 != bw->cursor->line)
 			udnarw(bw);
 		scrup(bw, 1, 0);
 		return 0;
 	} else
-		return -1;
+		/* was return -1; */
+		return uuparw(bw);
 }
 
 int udnslide(BW *bw)
 {
 	bw = (BW *) bw->parent->main->object;
-	if (bw->top->line + bw->h <= bw->top->b->eof->line) {
-		if (bw->top->line != bw->cursor->line)
+	if (bw->o.hex ? bw->top->line/16 + bw->h <= bw->top->b->eof->byte/16 : bw->top->line + bw->h <= bw->top->b->eof->line) {
+		if (bw->o.hex ? bw->top->byte/16 != bw->cursor->byte/16 : bw->top->line != bw->cursor->line)
 			uuparw(bw);
 		scrdn(bw, 1, 0);
 		return 0;
 	} else
-		return -1;
+		/* was return -1; */
+		return udnarw(bw);
 }
 
 /* Move cursor to specified line number */
